#-------------------------------------------------------------------------------
# OpenSSL 3.0 Library Build Configuration
#
# Builds libeay32 (crypto) and ssleay32 (SSL) static libraries
#-------------------------------------------------------------------------------

cmake_minimum_required(VERSION 3.15)

# Include parent's ucm.cmake for utility functions
include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/ucm.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/Libraries/OpenSSL.cmake)

#-------------------------------------------------------------------------------
# Discover OpenSSL source files
#-------------------------------------------------------------------------------

# SSL library sources (ssleay32)
# Using explicit list for SSL layer as it's smaller and stable
set(SSL_SOURCES
    ssl/pqueue.c
    ssl/ssl_rsa_legacy.c
    ssl/s3_lib.c
    ssl/s3_enc.c
    ssl/s3_msg.c
    ssl/methods.c
    ssl/t1_lib.c
    ssl/t1_enc.c
    ssl/tls13_enc.c
    ssl/d1_lib.c
    ssl/d1_msg.c
    ssl/d1_srtp.c
    ssl/ssl_lib.c
    ssl/ssl_cert.c
    ssl/ssl_sess.c
    ssl/ssl_ciph.c
    ssl/ssl_stat.c
    ssl/ssl_rsa.c
    ssl/ssl_asn1.c
    ssl/ssl_txt.c
    ssl/ssl_init.c
    ssl/ssl_conf.c
    ssl/ssl_mcnf.c
    ssl/bio_ssl.c
    ssl/ssl_err.c
    ssl/ssl_err_legacy.c
    ssl/tls_srp.c
    ssl/t1_trce.c
    ssl/ssl_utst.c
    ssl/tls_depr.c
    ssl/ssl_cert_comp.c
    ssl/record/methods/ssl3_cbc.c
    ssl/record/methods/tls_pad.c
    ssl/record/methods/dtls_meth.c
    ssl/record/methods/tls_common.c
    ssl/record/methods/tlsany_meth.c
    ssl/record/methods/tls13_meth.c
    ssl/record/methods/tls1_meth.c
    ssl/record/methods/ssl3_meth.c
    ssl/record/methods/tls_multib.c
    ssl/record/rec_layer_s3.c
    ssl/record/rec_layer_d1.c
    ssl/statem/statem_lib.c
    ssl/statem/statem_srvr.c
    ssl/statem/statem_clnt.c
    ssl/statem/extensions.c
    ssl/statem/extensions_srvr.c
    ssl/statem/extensions_clnt.c
    ssl/statem/extensions_cust.c
    ssl/statem/statem_dtls.c
    ssl/statem/statem.c
)

# Crypto library sources (libeay32)
# Use ucm_add_dirs to auto-discover all crypto/*.c files
# This handles ~400+ files automatically
# ucm_add_dirs(RECURSIVE TO CRYPTO_SOURCES crypto)
set(CRYPTO_SOURCES
    crypto/params_from_text.c
    crypto/bsearch.c
    crypto/ex_data.c
    crypto/threads_pthread.c
    crypto/threads_win.c
    crypto/threads_none.c
    crypto/initthread.c
    crypto/context.c
    crypto/params_idx.c
    crypto/sparse_array.c
    crypto/asn1_dsa.c
    crypto/packet.c
    crypto/param_build.c
    crypto/param_build_set.c
    crypto/threads_lib.c
    crypto/params_dup.c
    crypto/o_str.c
    crypto/cpuid.c
    crypto/ctype.c
    crypto/init.c
    crypto/mem_clr.c
    crypto/mem.c
    crypto/mem_sec.c
    crypto/cversion.c
    crypto/info.c
    crypto/cpt_err.c
    crypto/ebcdic.c
    crypto/uid.c
    crypto/o_time.c
    crypto/o_dir.c
    crypto/o_fopen.c
    crypto/getenv.c
    crypto/o_init.c
    crypto/init.c
    crypto/trace.c
    crypto/provider.c
    crypto/provider_conf.c
    crypto/provider_child.c
    crypto/provider_predefined.c
    crypto/punycode.c
    crypto/passphrase.c
    crypto/provider_core.c
    crypto/core_fetch.c
    crypto/core_algorithm.c
    crypto/core_namemap.c
    crypto/self_test_core.c
    crypto/params_idx.c
    crypto/der_writer.c
    crypto/sleep.c
    crypto/deterministic_nonce.c
    crypto/time.c
    crypto/encode_decode/encoder_meth.c
    crypto/encode_decode/encoder_lib.c
    crypto/encode_decode/encoder_pkey.c
    crypto/encode_decode/decoder_meth.c
    crypto/encode_decode/decoder_lib.c
    crypto/encode_decode/decoder_pkey.c
    crypto/encode_decode/encoder_err.c
    crypto/encode_decode/decoder_err.c
    crypto/md4/md4_dgst.c
    crypto/md4/md4_one.c
    crypto/md5/md5_dgst.c
    crypto/md5/md5_one.c
    crypto/md5/md5_sha1.c
    crypto/modes/cbc128.c
    crypto/modes/cfb128.c
    crypto/modes/ofb128.c
    crypto/modes/ccm128.c
    crypto/modes/gcm128.c
    crypto/modes/xts128.c
    crypto/modes/wrap128.c
    crypto/modes/ctr128.c
    crypto/modes/ocb128.c
    crypto/modes/siv128.c
    crypto/modes/xts128gb.c
    crypto/sha/sha1dgst.c
    crypto/sha/sha1_one.c
    crypto/sha/sha3.c
    crypto/sha/sha256.c
    crypto/sha/sha512.c
    crypto/hmac/hmac.c
    crypto/ripemd/rmd_dgst.c
    crypto/hmac/hm_ameth.c
    crypto/hmac/hm_pmeth.c
    crypto/ripemd/rmd_one.c
    crypto/des/set_key.c
    crypto/des/ecb_enc.c
    crypto/des/cbc_enc.c
    crypto/des/ecb3_enc.c
    crypto/des/cfb64enc.c
    crypto/des/cfb64ede.c
    crypto/des/cfb_enc.c
    crypto/des/ofb64ede.c
    crypto/des/ofb64enc.c
    crypto/des/ofb_enc.c
    crypto/des/str2key.c
    crypto/des/pcbc_enc.c
    crypto/des/qud_cksm.c
    crypto/des/rand_key.c
    crypto/des/fcrypt.c
    crypto/des/xcbc_enc.c
    crypto/des/cbc_cksm.c
    crypto/rc2/rc2_ecb.c
    crypto/rc2/rc2_skey.c
    crypto/rc2/rc2_cbc.c
    crypto/rc2/rc2cfb64.c
    crypto/rc2/rc2ofb64.c
    # crypto/rc4/rc4_skey.c
    # crypto/rc4/rc4_enc.c
    crypto/idea/i_cbc.c
    crypto/idea/i_cfb64.c
    crypto/idea/i_ofb64.c
    crypto/idea/i_ecb.c
    crypto/idea/i_skey.c
    crypto/bf/bf_skey.c
    crypto/bf/bf_ecb.c
    crypto/bf/bf_cfb64.c
    crypto/bf/bf_ofb64.c
    crypto/cast/c_skey.c
    crypto/cast/c_ecb.c
    crypto/cast/c_cfb64.c
    crypto/cast/c_ofb64.c
    crypto/aes/aes_misc.c
    crypto/aes/aes_ecb.c
    crypto/aes/aes_cfb.c
    crypto/aes/aes_ofb.c
    crypto/aes/aes_ige.c
    crypto/aes/aes_wrap.c
    crypto/bn/bn_asm.c
    crypto/bn/bn_add.c
    crypto/bn/bn_div.c
    crypto/bn/bn_exp.c
    crypto/bn/bn_lib.c
    crypto/bn/bn_ctx.c
    crypto/bn/bn_mod.c
    crypto/bn/bn_mul.c
    crypto/bn/bn_print.c
    crypto/bn/bn_rand.c
    crypto/bn/bn_shift.c
    crypto/bn/bn_word.c
    crypto/bn/bn_blind.c
    crypto/bn/bn_kron.c
    crypto/bn/bn_sqrt.c
    crypto/bn/bn_gcd.c
    crypto/bn/bn_prime.c
    crypto/bn/bn_err.c
    crypto/bn/bn_sqr.c
    crypto/bn/bn_recp.c
    crypto/bn/bn_mont.c
    crypto/bn/bn_mpi.c
    crypto/bn/bn_exp2.c
    crypto/bn/bn_gf2m.c
    crypto/bn/bn_nist.c
    crypto/bn/bn_depr.c
    crypto/bn/bn_const.c
    crypto/bn/bn_intern.c
    crypto/bn/bn_dh.c
    crypto/bn/bn_srp.c
    crypto/bn/bn_conv.c
    crypto/bn/bn_rsa_fips186_4.c
    crypto/bn/rsaz_exp.c
    crypto/bn/rsaz_exp_x2.c
    crypto/rsa/rsa_ossl.c
    crypto/rsa/rsa_gen.c
    crypto/rsa/rsa_lib.c
    crypto/rsa/rsa_sign.c
    crypto/rsa/rsa_saos.c
    crypto/rsa/rsa_err.c
    crypto/rsa/rsa_pk1.c
    crypto/rsa/rsa_ssl.c
    crypto/rsa/rsa_none.c
    crypto/rsa/rsa_oaep.c
    crypto/rsa/rsa_chk.c
    crypto/rsa/rsa_pss.c
    crypto/rsa/rsa_x931.c
    crypto/rsa/rsa_asn1.c
    crypto/rsa/rsa_depr.c
    crypto/rsa/rsa_pmeth.c
    crypto/rsa/rsa_crpt.c
    crypto/rsa/rsa_sp800_56b_gen.c
    crypto/rsa/rsa_sp800_56b_check.c
    crypto/rsa/rsa_backend.c
    crypto/rsa/rsa_mp_names.c
    crypto/rsa/rsa_schemes.c
    crypto/rsa/rsa_ameth.c
    crypto/rsa/rsa_mp.c
    crypto/dsa/dsa_gen.c
    crypto/dsa/dsa_key.c
    crypto/dsa/dsa_lib.c
    crypto/dsa/dsa_asn1.c
    crypto/dsa/dsa_vrf.c
    crypto/dsa/dsa_sign.c
    crypto/dsa/dsa_err.c
    crypto/dsa/dsa_ossl.c
    crypto/dsa/dsa_depr.c
    crypto/dsa/dsa_pmeth.c
    crypto/dsa/dsa_ameth.c
    crypto/dsa/dsa_backend.c
    crypto/dsa/dsa_check.c
    crypto/dso/dso_dl.c
    crypto/dso/dso_dlfcn.c
    crypto/dso/dso_err.c
    crypto/dso/dso_lib.c
    crypto/dso/dso_openssl.c
    crypto/dso/dso_win32.c
    crypto/dh/dh_asn1.c
    crypto/dh/dh_gen.c
    crypto/dh/dh_key.c
    crypto/dh/dh_lib.c
    crypto/dh/dh_check.c
    crypto/dh/dh_err.c
    crypto/dh/dh_depr.c
    crypto/dh/dh_pmeth.c
    crypto/dh/dh_ameth.c
    crypto/dh/dh_rfc5114.c
    crypto/dh/dh_kdf.c
    crypto/dh/dh_backend.c
    crypto/dh/dh_group_params.c
    crypto/buffer/buffer.c
    crypto/buffer/buf_err.c
    crypto/bio/bio_lib.c
    crypto/bio/bio_cb.c
    crypto/bio/bio_err.c
    crypto/bio/bio_print.c
    crypto/bio/bio_dump.c
    crypto/bio/bio_addr.c
    crypto/bio/bio_sock.c
    crypto/bio/bio_sock2.c
    crypto/bio/bio_meth.c
    crypto/bio/ossl_core_bio.c
    crypto/bio/bss_null.c
    crypto/bio/bss_mem.c
    crypto/bio/bss_bio.c
    crypto/bio/bss_fd.c
    crypto/bio/bss_file.c
    crypto/bio/bss_sock.c
    crypto/bio/bss_conn.c
    crypto/bio/bss_acpt.c
    crypto/bio/bss_dgram.c
    crypto/bio/bss_log.c
    crypto/bio/bss_core.c
    crypto/bio/bf_null.c
    crypto/bio/bf_buff.c
    crypto/bio/bf_lbuf.c
    crypto/bio/bf_nbio.c
    crypto/bio/bf_prefix.c
    crypto/bio/bf_readbuff.c
    crypto/bio/bss_dgram.c
    crypto/bio/bss_dgram_pair.c
    crypto/stack/stack.c
    crypto/lhash/lhash.c
    crypto/lhash/lh_stats.c
    crypto/rand/rand_lib.c
    crypto/rand/rand_err.c
    crypto/rand/rand_egd.c
    crypto/rand/rand_win.c
    crypto/rand/rand_pool.c
    crypto/rand/rand_meth.c
    crypto/rand/prov_seed.c
    crypto/rand/rand_uniform.c
    # crypto/rand/rand_deprecated.c
    crypto/err/err.c
    crypto/err/err_all.c
    crypto/err/err_prn.c
    crypto/err/err_blocks.c
    crypto/err/err_mark.c
    crypto/err/err_save.c
    # crypto/err/err_all_legacy.c
    crypto/objects/o_names.c
    crypto/objects/obj_dat.c
    crypto/objects/obj_lib.c
    crypto/objects/obj_err.c
    crypto/objects/obj_xref.c
    crypto/evp/digest.c
    crypto/evp/evp_enc.c
    crypto/evp/evp_lib.c
    crypto/evp/evp_fetch.c
    crypto/evp/evp_utils.c
    crypto/evp/mac_lib.c
    crypto/evp/mac_meth.c
    crypto/evp/keymgmt_meth.c
    crypto/evp/keymgmt_lib.c
    crypto/evp/kdf_lib.c
    crypto/evp/kdf_meth.c
    crypto/evp/m_sigver.c
    crypto/evp/pmeth_lib.c
    crypto/evp/signature.c
    crypto/evp/p_lib.c
    crypto/evp/pmeth_gn.c
    crypto/evp/exchange.c
    crypto/evp/evp_rand.c
    crypto/evp/asymcipher.c
    crypto/evp/kem.c
    crypto/evp/dh_support.c
    crypto/evp/ec_support.c
    crypto/evp/pmeth_check.c
    crypto/evp/encode.c
    crypto/evp/evp_key.c
    crypto/evp/evp_cnf.c
    crypto/evp/e_des.c
    crypto/evp/e_bf.c
    crypto/evp/e_idea.c
    crypto/evp/e_des3.c
    crypto/evp/e_rc4.c
    crypto/evp/e_aes.c
    crypto/evp/names.c
    crypto/evp/e_aria.c
    crypto/evp/e_sm4.c
    crypto/evp/e_xcbc_d.c
    crypto/evp/e_rc2.c
    crypto/evp/e_cast.c
    crypto/evp/e_rc5.c
    crypto/evp/m_null.c
    crypto/evp/p_seal.c
    crypto/evp/p_sign.c
    crypto/evp/p_verify.c
    crypto/evp/p_legacy.c
    crypto/evp/bio_md.c
    crypto/evp/bio_b64.c
    crypto/evp/bio_enc.c
    crypto/evp/evp_err.c
    crypto/evp/e_null.c
    crypto/evp/c_allc.c
    crypto/evp/c_alld.c
    crypto/evp/bio_ok.c
    crypto/evp/evp_pkey.c
    crypto/evp/evp_pbe.c
    crypto/evp/p5_crpt.c
    crypto/evp/p5_crpt2.c
    crypto/evp/pbe_scrypt.c
    crypto/evp/e_aes_cbc_hmac_sha1.c
    crypto/evp/e_aes_cbc_hmac_sha256.c
    crypto/evp/e_rc4_hmac_md5.c
    crypto/evp/e_chacha20_poly1305.c
    crypto/evp/legacy_sha.c
    crypto/evp/ctrl_params_translate.c
    # crypto/evp/cmeth_lib.c
    crypto/evp/dh_ctrl.c
    crypto/evp/dsa_ctrl.c
    crypto/evp/ec_ctrl.c
    crypto/evp/p_enc.c
    crypto/evp/p_dec.c
    crypto/evp/e_old.c
    crypto/evp/p_open.c
    crypto/evp/legacy_md4.c
    crypto/evp/legacy_md5.c
    crypto/evp/legacy_md5_sha1.c
    crypto/evp/legacy_blake2.c
    crypto/evp/legacy_ripemd.c
    crypto/asn1/a_object.c
    crypto/asn1/a_bitstr.c
    crypto/asn1/a_utctm.c
    crypto/asn1/a_gentm.c
    crypto/asn1/a_time.c
    crypto/asn1/a_int.c
    crypto/asn1/a_octet.c
    crypto/asn1/a_print.c
    crypto/asn1/a_type.c
    crypto/asn1/a_dup.c
    crypto/asn1/a_d2i_fp.c
    crypto/asn1/a_i2d_fp.c
    crypto/asn1/a_utf8.c
    crypto/asn1/a_sign.c
    crypto/asn1/a_digest.c
    crypto/asn1/a_verify.c
    crypto/asn1/a_mbstr.c
    crypto/asn1/a_strex.c
    crypto/asn1/ameth_lib.c
    crypto/asn1/x_algor.c
    crypto/asn1/x_val.c
    crypto/asn1/x_sig.c
    crypto/asn1/x_bignum.c
    crypto/asn1/x_long.c
    crypto/asn1/x_info.c
    crypto/asn1/x_spki.c
    crypto/asn1/nsseq.c
    crypto/asn1/d2i_pu.c
    crypto/asn1/d2i_pr.c
    crypto/asn1/i2d_pu.c
    crypto/asn1/i2d_pr.c
    crypto/asn1/t_pkey.c
    crypto/asn1/t_spki.c
    crypto/asn1/t_bitst.c
    crypto/asn1/tasn_new.c
    crypto/asn1/tasn_fre.c
    crypto/asn1/tasn_enc.c
    crypto/asn1/tasn_dec.c
    crypto/asn1/tasn_utl.c
    crypto/asn1/tasn_typ.c
    crypto/asn1/tasn_prn.c
    crypto/asn1/f_int.c
    crypto/asn1/f_string.c
    crypto/asn1/n_pkey.c
    crypto/asn1/x_pkey.c
    crypto/asn1/asn_mime.c
    crypto/asn1/asn1_gen.c
    crypto/asn1/asn1_par.c
    crypto/asn1/asn1_lib.c
    crypto/asn1/asn1_err.c
    crypto/asn1/bio_asn1.c
    crypto/asn1/bio_ndef.c
    crypto/asn1/a_strnid.c
    crypto/asn1/evp_asn1.c
    crypto/asn1/asn_pack.c
    crypto/asn1/p5_pbe.c
    crypto/asn1/p5_pbev2.c
    crypto/asn1/p8_pkey.c
    crypto/asn1/asn_moid.c
    crypto/asn1/p5_scrypt.c
    crypto/asn1/asn_mstbl.c
    crypto/asn1/x_int64.c
    crypto/pem/pem_sign.c
    crypto/pem/pem_info.c
    crypto/pem/pem_lib.c
    crypto/pem/pem_all.c
    crypto/pem/pem_err.c
    crypto/pem/pem_x509.c
    crypto/pem/pem_xaux.c
    crypto/pem/pem_oth.c
    crypto/pem/pem_pk8.c
    crypto/pem/pem_pkey.c
    crypto/pem/pvkfmt.c
    crypto/x509/x509_def.c
    crypto/x509/x509_d2.c
    crypto/x509/x509_r2x.c
    crypto/x509/x509_cmp.c
    crypto/x509/x509_obj.c
    crypto/x509/x509_req.c
    crypto/x509/x509spki.c
    crypto/x509/x509_vfy.c
    crypto/x509/x509_set.c
    crypto/x509/x509cset.c
    crypto/x509/x509rset.c
    crypto/x509/x509_err.c
    crypto/x509/x509name.c
    crypto/x509/x509_v3.c
    crypto/x509/x509_ext.c
    crypto/x509/x509_att.c
    crypto/x509/x509_meth.c
    crypto/x509/x509_lu.c
    crypto/x509/x_all.c
    crypto/x509/x509_txt.c
    crypto/x509/x509_trust.c
    crypto/x509/by_file.c
    crypto/x509/by_dir.c
    crypto/x509/by_store.c
    crypto/x509/x509_vpm.c
    crypto/x509/x_crl.c
    crypto/x509/t_crl.c
    crypto/x509/x_req.c
    crypto/x509/t_req.c
    crypto/x509/x_x509.c
    crypto/x509/t_x509.c
    crypto/x509/x_pubkey.c
    crypto/x509/x_x509a.c
    crypto/x509/x_attrib.c
    crypto/x509/x_exten.c
    crypto/x509/x_name.c
    crypto/x509/v3err.c
    crypto/x509/pcy_cache.c
    crypto/x509/pcy_node.c
    crypto/x509/pcy_data.c
    crypto/x509/pcy_map.c
    crypto/x509/pcy_tree.c
    crypto/x509/pcy_lib.c
    crypto/x509/v3_bcons.c
    crypto/x509/v3_bitst.c
    crypto/x509/v3_conf.c
    crypto/x509/v3_extku.c
    crypto/x509/v3_ia5.c
    crypto/x509/v3_lib.c
    crypto/x509/v3_prn.c
    crypto/x509/v3_utl.c
    crypto/x509/v3_genn.c
    crypto/x509/v3_san.c
    crypto/x509/v3_skid.c
    crypto/x509/v3_akid.c
    crypto/x509/v3_pku.c
    crypto/x509/v3_int.c
    crypto/x509/v3_enum.c
    crypto/x509/v3_sxnet.c
    crypto/x509/v3_cpols.c
    crypto/x509/v3_crld.c
    crypto/x509/v3_purp.c
    crypto/x509/v3_info.c
    crypto/x509/v3_akeya.c
    crypto/x509/v3_pmaps.c
    crypto/x509/v3_pcons.c
    crypto/x509/v3_ncons.c
    crypto/x509/v3_pcia.c
    crypto/x509/v3_pci.c
    crypto/x509/v3_asid.c
    crypto/x509/v3_addr.c
    crypto/x509/v3_tlsf.c
    crypto/x509/v3_admis.c
    crypto/x509/v3_utf8.c
    crypto/x509/v3_ist.c
    crypto/x509/v3_no_rev_avail.c
    crypto/x509/v3_soa_id.c
    crypto/x509/v3_ind_iss.c
    crypto/x509/v3_no_ass.c
    crypto/x509/v3_single_use.c
    crypto/x509/v3_group_ac.c
    crypto/conf/conf_err.c
    crypto/conf/conf_lib.c
    crypto/conf/conf_api.c
    crypto/conf/conf_def.c
    crypto/conf/conf_mod.c
    crypto/conf/conf_mall.c
    crypto/conf/conf_sap.c
    crypto/conf/conf_ssl.c
    crypto/pkcs7/pk7_asn1.c
    crypto/pkcs7/pk7_lib.c
    crypto/pkcs7/pkcs7err.c
    crypto/pkcs7/pk7_doit.c
    crypto/pkcs7/pk7_smime.c
    crypto/pkcs7/pk7_attr.c
    crypto/pkcs7/pk7_mime.c
    crypto/pkcs12/p12_add.c
    crypto/pkcs12/p12_asn.c
    crypto/pkcs12/p12_attr.c
    crypto/pkcs12/p12_crpt.c
    crypto/pkcs12/p12_crt.c
    crypto/pkcs12/p12_decr.c
    crypto/pkcs12/p12_init.c
    crypto/pkcs12/p12_key.c
    crypto/pkcs12/p12_kiss.c
    crypto/pkcs12/p12_mutl.c
    crypto/pkcs12/p12_utl.c
    crypto/pkcs12/p12_npas.c
    crypto/pkcs12/pk12err.c
    crypto/pkcs12/p12_p8d.c
    crypto/pkcs12/p12_p8e.c
    crypto/pkcs12/p12_sbag.c
    crypto/comp/comp_lib.c
    crypto/comp/comp_err.c
    # crypto/comp/c_zlib.c
    crypto/cmac/cm_ameth.c
    crypto/cmac/cm_pmeth.c
    crypto/cmac/cmac.c
    crypto/ocsp/ocsp_asn.c
    crypto/ocsp/ocsp_ext.c
    crypto/ocsp/ocsp_http.c
    crypto/ocsp/ocsp_lib.c
    crypto/ocsp/ocsp_cl.c
    crypto/ocsp/ocsp_srv.c
    crypto/ocsp/ocsp_prn.c
    crypto/ocsp/ocsp_vfy.c
    crypto/ocsp/ocsp_err.c
    crypto/ocsp/v3_ocsp.c
    crypto/ui/ui_err.c
    crypto/ui/ui_lib.c
    crypto/ui/ui_openssl.c
    crypto/ui/ui_util.c
    crypto/ui/ui_null.c
    crypto/o_init.c
    crypto/srp/srp_lib.c
    crypto/srp/srp_vfy.c
    crypto/txt_db/txt_db.c
    crypto/ec/ec_lib.c
    crypto/ec/ecp_smpl.c
    crypto/ec/ecp_mont.c
    crypto/ec/ecp_nist.c
    crypto/ec/ec_cvt.c
    crypto/ec/ec_mult.c
    crypto/ec/ec_curve.c
    crypto/ec/ec_check.c
    crypto/ec/ec_key.c
    crypto/ec/ec_kmeth.c
    crypto/ec/ecx_key.c
    crypto/ec/ec_asn1.c
    crypto/ec/ec2_smpl.c
    crypto/ec/ecp_oct.c
    crypto/ec/ec2_oct.c
    crypto/ec/ec_oct.c
    crypto/ec/ecdh_ossl.c
    crypto/ec/ecdsa_ossl.c
    crypto/ec/ecdsa_sign.c
    crypto/ec/ecdsa_vrf.c
    crypto/ec/curve25519.c
    crypto/ec/curve448/f_generic.c
    crypto/ec/curve448/scalar.c
    crypto/ec/curve448/curve448_tables.c
    crypto/ec/curve448/eddsa.c
    crypto/ec/curve448/curve448.c
    crypto/ec/ec_backend.c
    crypto/ec/ecx_backend.c
    crypto/ec/ecdh_kdf.c
    crypto/ec/curve448/arch_64/f_impl64.c
    crypto/ec/ecp_nistputil.c
    crypto/ec/ecp_smpl.c
    crypto/ec/ecdh_ossl.c
    crypto/ec/ec_kmeth.c
    crypto/ec/ecx_meth.c
    crypto/ec/ecdsa_ossl.c
    crypto/ec/ecdsa_sign.c
    crypto/ec/ec_pmeth.c
    crypto/ec/eck_prn.c
    crypto/ec/curve448/eddsa.c
    crypto/ec/curve448/curve448.c
    crypto/ec/curve448/scalar.c
    crypto/ec/curve448/curve448_tables.c
    crypto/ec/curve448/f_generic.c
    # crypto/ec/curve448/arch_64/f_impl64.c
    crypto/ec/curve448/arch_32/f_impl.c
    crypto/ec/curve448/arch_32/f_impl32.c
    crypto/ec/ecdsa_vrf.c
    crypto/ec/ec_ameth.c
    crypto/cms/cms_sd.c
    crypto/cms/cms_err.c
    crypto/cms/cms_lib.c
    crypto/cms/cms_env.c
    crypto/cms/cms_asn1.c
    crypto/cms/cms_kari.c
    crypto/cms/cms_dd.c
    crypto/cms/cms_enc.c
    crypto/cms/cms_io.c
    crypto/cms/cms_pwri.c
    crypto/cms/cms_att.c
    crypto/ct/ct_oct.c
    crypto/ct/ct_prn.c
    crypto/ct/ct_err.c
    crypto/ct/ct_x509v3.c
    crypto/ct/ct_sct.c
    crypto/ct/ct_log.c
    crypto/ct/ct_policy.c
    crypto/ct/ct_sct_ctx.c
    crypto/ct/ct_b64.c
    crypto/ct/ct_vfy.c
    crypto/async/async.c
    crypto/async/async_err.c
    crypto/async/async_wait.c
    # crypto/async/arch/async_win.c
    crypto/async/arch/async_null.c
    crypto/kdf/hkdf.c
    crypto/kdf/tls1_prf.c
    crypto/kdf/kdf_err.c
    crypto/kdf/scrypt.c
    crypto/store/store_init.c
    crypto/store/store_register.c
    crypto/store/store_err.c
    crypto/store/store_lib.c
    crypto/store/store_result.c
    crypto/store/store_strings.c
    crypto/store/store_meth.c
    crypto/aria/aria.c
    crypto/blake2/blake2b.c
    crypto/blake2/blake2s.c
    crypto/sm3/sm3.c
    crypto/sm3/legacy_sm3.c
    crypto/sm4/sm4.c
    crypto/poly1305/poly1305.c
    crypto/siphash/siphash.c
    crypto/sm2/sm2_pmeth.c
    crypto/sm2/sm2_crypt.c
    crypto/sm2/sm2_sign.c
    crypto/sm2/sm2_key.c
    crypto/chacha/chacha_enc.c
    crypto/http/http_err.c
    crypto/http/http_client.c
    crypto/http/http_lib.c
    # crypto/des/des_enc.c
    # crypto/bf/bf_enc.c
    # crypto/cast/c_enc.c
    crypto/crmf/crmf_err.c
    crypto/cmp/cmp_err.c
    crypto/cmp/cmp_util.c
    crypto/ess/ess_err.c
    crypto/property/property_err.c
    crypto/property/property.c
    crypto/property/property_parse.c
    crypto/property/property_string.c
    crypto/property/defn_cache.c
    crypto/property/property_query.c
    crypto/ffc/ffc_params.c
    crypto/ffc/ffc_params.c
    crypto/ffc/ffc_params_validate.c
    crypto/ffc/ffc_params_generate.c
    crypto/ffc/ffc_key_generate.c
    crypto/ffc/ffc_key_validate.c
    crypto/ffc/ffc_dh.c
    crypto/ffc/ffc_backend.c
    crypto/hpke/hpke_util.c
    crypto/thread/internal.c
    crypto/thread/arch.c
    crypto/thread/arch/thread_win.c
    providers/prov_running.c
    providers/nullprov.c
    providers/baseprov.c
    providers/defltprov.c
    providers/common/bio_prov.c
    providers/common/digest_to_nid.c
    providers/common/provider_err.c
    providers/common/provider_ctx.c
    providers/common/provider_util.c
    providers/common/provider_seeding.c
    providers/common/securitycheck.c
    providers/common/securitycheck_default.c
    providers/common/capabilities.c
    providers/common/der/der_dsa_key.c
    providers/common/der/der_dsa_sig.c
    providers/common/der/der_ec_key.c
    providers/common/der/der_ec_sig.c
    providers/common/der/der_ecx_key.c
    providers/common/der/der_rsa_key.c
    providers/common/der/der_rsa_sig.c
    providers/common/der/der_sm2_key.c
    providers/common/der/der_sm2_sig.c
    providers/common/der/der_digests_gen.c
    providers/common/der/der_dsa_gen.c
    providers/common/der/der_ec_gen.c
    providers/common/der/der_ecx_gen.c
    providers/common/der/der_rsa_gen.c
    providers/common/der/der_sm2_gen.c
    providers/common/der/der_wrap_gen.c
    providers/implementations/digests/blake2_prov.c
    providers/implementations/digests/blake2b_prov.c
    providers/implementations/digests/blake2s_prov.c
    providers/implementations/digests/digestcommon.c
    providers/implementations/digests/sha2_prov.c
    providers/implementations/digests/sha3_prov.c
    providers/implementations/digests/sm3_prov.c
    providers/implementations/digests/md5_prov.c
    providers/implementations/digests/ripemd_prov.c
    providers/implementations/digests/md5_sha1_prov.c
    providers/implementations/digests/null_prov.c
    providers/implementations/rands/drbg.c
    providers/implementations/rands/crngt.c
    providers/implementations/rands/drbg_ctr.c
    providers/implementations/rands/drbg_hash.c
    providers/implementations/rands/drbg_hmac.c
    providers/implementations/rands/seed_src.c
    providers/implementations/rands/test_rng.c
    providers/implementations/ciphers/ciphercommon_block.c
    providers/implementations/ciphers/ciphercommon_hw.c
    providers/implementations/ciphers/ciphercommon_gcm.c
    providers/implementations/ciphers/ciphercommon_gcm_hw.c
    providers/implementations/ciphers/ciphercommon_ccm.c
    providers/implementations/ciphers/ciphercommon_ccm_hw.c
    providers/implementations/ciphers/cipher_null.c
    providers/implementations/ciphers/cipher_aes.c
    providers/implementations/ciphers/ciphercommon.c
    providers/implementations/ciphers/cipher_cts.c
    providers/implementations/ciphers/cipher_aes_hw.c
    providers/implementations/ciphers/cipher_aria.c
    providers/implementations/ciphers/cipher_aria_ccm.c
    providers/implementations/ciphers/cipher_aria_ccm_hw.c
    providers/implementations/ciphers/cipher_aes_xts.c
    providers/implementations/ciphers/cipher_aes_xts_hw.c
    providers/implementations/ciphers/cipher_aes_ocb.c
    providers/implementations/ciphers/cipher_aes_ocb_hw.c
    providers/implementations/ciphers/cipher_aes_siv.c
    providers/implementations/ciphers/cipher_aes_siv_hw.c
    providers/implementations/ciphers/cipher_aes_gcm.c
    providers/implementations/ciphers/cipher_aes_gcm_hw.c
    providers/implementations/ciphers/cipher_aes_gcm_siv.c
    providers/implementations/ciphers/cipher_aes_gcm_siv_hw.c
    providers/implementations/ciphers/cipher_aes_gcm_siv_polyval.c
    providers/implementations/ciphers/cipher_aes_ccm.c
    providers/implementations/ciphers/cipher_aes_ccm_hw.c
    providers/implementations/ciphers/cipher_aes_wrp.c
    providers/implementations/ciphers/cipher_aes_cbc_hmac_sha.c
    providers/implementations/ciphers/cipher_aes_cbc_hmac_sha1_hw.c
    providers/implementations/ciphers/cipher_aes_cbc_hmac_sha256_hw.c
    providers/implementations/ciphers/cipher_aes_xts_fips.c
    providers/implementations/ciphers/cipher_aria_gcm.c
    providers/implementations/ciphers/cipher_aria_gcm_hw.c
    providers/implementations/ciphers/cipher_aria_hw.c
    providers/implementations/ciphers/cipher_tdes.c
    providers/implementations/ciphers/cipher_tdes_common.c
    providers/implementations/ciphers/cipher_tdes_default.c
    providers/implementations/ciphers/cipher_tdes_default_hw.c
    providers/implementations/ciphers/cipher_tdes_hw.c
    providers/implementations/ciphers/cipher_tdes_wrap.c
    providers/implementations/ciphers/cipher_tdes_wrap_hw.c
    providers/implementations/ciphers/cipher_sm4.c
    providers/implementations/ciphers/cipher_sm4_ccm.c
    providers/implementations/ciphers/cipher_sm4_gcm.c
    providers/implementations/ciphers/cipher_sm4_ccm_hw.c
    providers/implementations/ciphers/cipher_sm4_gcm_hw.c
    providers/implementations/ciphers/cipher_sm4_hw.c
    providers/implementations/ciphers/cipher_sm4_xts.c
    providers/implementations/ciphers/cipher_sm4_xts_hw.c
    providers/implementations/ciphers/cipher_chacha20.c
    providers/implementations/ciphers/cipher_chacha20_hw.c
    providers/implementations/ciphers/cipher_chacha20_poly1305.c
    providers/implementations/ciphers/cipher_chacha20_poly1305_hw.c
    providers/implementations/macs/blake2b_mac.c
    providers/implementations/macs/blake2s_mac.c
    providers/implementations/macs/cmac_prov.c
    providers/implementations/macs/gmac_prov.c
    providers/implementations/macs/hmac_prov.c
    providers/implementations/macs/kmac_prov.c
    providers/implementations/macs/poly1305_prov.c
    providers/implementations/macs/siphash_prov.c
    providers/implementations/kdfs/hkdf.c
    providers/implementations/kdfs/kbkdf.c
    providers/implementations/kdfs/krb5kdf.c
    providers/implementations/kdfs/pbkdf1.c
    providers/implementations/kdfs/pbkdf2.c
    providers/implementations/kdfs/pbkdf2_fips.c
    providers/implementations/kdfs/pkcs12kdf.c
    providers/implementations/kdfs/scrypt.c
    providers/implementations/kdfs/sshkdf.c
    providers/implementations/kdfs/sskdf.c
    providers/implementations/kdfs/tls1_prf.c
    providers/implementations/kdfs/x942kdf.c
    providers/implementations/kdfs/hmacdrbg_kdf.c
    providers/implementations/kdfs/argon2.c
    providers/implementations/exchange/dh_exch.c
    providers/implementations/exchange/ecdh_exch.c
    providers/implementations/exchange/ecx_exch.c
    providers/implementations/exchange/kdf_exch.c
    providers/implementations/signature/dsa_sig.c
    providers/implementations/signature/ecdsa_sig.c
    providers/implementations/signature/eddsa_sig.c
    providers/implementations/signature/mac_legacy_sig.c
    providers/implementations/signature/rsa_sig.c
    providers/implementations/signature/sm2_sig.c
    providers/implementations/asymciphers/rsa_enc.c
    providers/implementations/asymciphers/sm2_enc.c
    providers/implementations/kem/rsa_kem.c
    providers/implementations/kem/ec_kem.c
    providers/implementations/kem/kem_util.c
    providers/implementations/kem/ecx_kem.c
    providers/implementations/keymgmt/dh_kmgmt.c
    providers/implementations/keymgmt/dsa_kmgmt.c
    providers/implementations/keymgmt/ec_kmgmt.c
    providers/implementations/keymgmt/ecx_kmgmt.c
    providers/implementations/keymgmt/kdf_legacy_kmgmt.c
    providers/implementations/keymgmt/mac_legacy_kmgmt.c
    providers/implementations/keymgmt/rsa_kmgmt.c
    providers/implementations/encode_decode/decode_der2key.c
    providers/implementations/encode_decode/decode_epki2pki.c
    providers/implementations/encode_decode/decode_msblob2key.c
    providers/implementations/encode_decode/decode_pem2der.c
    providers/implementations/encode_decode/decode_pvk2key.c
    providers/implementations/encode_decode/decode_spki2typespki.c
    providers/implementations/encode_decode/encode_key2any.c
    providers/implementations/encode_decode/encode_key2blob.c
    providers/implementations/encode_decode/encode_key2ms.c
    providers/implementations/encode_decode/encode_key2text.c
    providers/implementations/encode_decode/endecoder_common.c
    providers/implementations/storemgmt/file_store.c
    providers/implementations/storemgmt/file_store_any2obj.c
    providers/implementations/storemgmt/winstore_store.c
)

# Explicitly exclude files that are commented out in original CMakeLists.txt
ucm_remove_files(FROM CRYPTO_SOURCES
    crypto/rc4/rc4_skey.c
    crypto/rc4/rc4_enc.c
    crypto/des/des_enc.c
    crypto/bf/bf_enc.c
    crypto/cast/c_enc.c
    crypto/comp/c_zlib.c
    crypto/err/err_all_legacy.c
    crypto/async/arch/async_win.c
    crypto/ec/curve448/arch_64/f_impl64.c
    crypto/ec/curve448/arch_32/f_impl.c
    crypto/ec/curve448/arch_32/f_impl32.c
    crypto/curve448/arch_64/f_impl64.c
    crypto/des/des_enc.c
    crypto/bf/bf_enc.c
    crypto/cast/c_enc.c
    crypto/rand/rand_deprecated.c
    crypto/evp/cmeth_lib.c
)

# Platform-specific C files
if(PROJECT_PLATFORM STREQUAL "ARM64")
    ucm_add_files(TO CRYPTO_PLATFORM_SOURCES
        crypto/aes/aes_core.c
        crypto/aes/aes_cbc.c
        crypto/sha/keccak1600.c
        crypto/rc4/rc4_enc.c
        crypto/rc4/rc4_skey.c
        crypto/des/des_enc.c
        crypto/cast/c_enc.c
        crypto/bf/bf_enc.c
    )
elseif(PROJECT_PLATFORM STREQUAL "x64")
    ucm_add_files(TO CRYPTO_PLATFORM_SOURCES
        crypto/rc4/rc4_enc.c
        crypto/rc4/rc4_skey.c
        crypto/des/des_enc.c
        crypto/cast/c_enc.c
        crypto/bf/bf_enc.c
    )
elseif(PROJECT_PLATFORM STREQUAL "x86")
    ucm_add_files(TO CRYPTO_PLATFORM_SOURCES
        crypto/sha/keccak1600.c
    )
endif()

#-------------------------------------------------------------------------------
# Setup ASM files
#-------------------------------------------------------------------------------

#-------------------------------------------------------------------------------
# Function: openssl_setup_asm_files
#
# Sets up platform-specific ASM files for OpenSSL
#
# Arguments:
#   RESULT_VAR - Variable name to store ASM file list
#
# Output:
#   Sets RESULT_VAR with list of ASM object files
#-------------------------------------------------------------------------------
function(openssl_setup_asm_files RESULT_VAR)
    set(_asm_files )

    if(PROJECT_PLATFORM STREQUAL "x64")
        set(_nasm_args win64)
        set(_asm_file_list
            crypto/sha/sha512-x86_64.asm
            crypto/sha/sha256-x86_64.asm
            crypto/sha/sha256-mb-x86_64.asm
            crypto/sha/sha1-x86_64.asm
            crypto/sha/sha1-mb-x86_64.asm
            crypto/sha/keccak1600-x86_64.asm
            crypto/md5/md5-x86_64.asm
            crypto/ec/x25519-x86_64.asm
            crypto/ec/ecp_nistz256-x86_64.asm
            crypto/poly1305/poly1305-x86_64.asm
            crypto/aes/vpaes-x86_64.asm
            crypto/aes/bsaes-x86_64.asm
            crypto/aes/aesni-x86_64.asm
            crypto/aes/aesni-sha256-x86_64.asm
            crypto/aes/aesni-sha1-x86_64.asm
            crypto/aes/aesni-mb-x86_64.asm
            crypto/aes/aes-x86_64.asm
            crypto/bn/x86_64-mont5.asm
            crypto/bn/x86_64-mont.asm
            crypto/bn/x86_64-gf2m.asm
            crypto/bn/rsaz-x86_64.asm
            crypto/bn/rsaz-avx2.asm
            crypto/bn/rsaz-4k-avx512.asm
            crypto/bn/rsaz-3k-avx512.asm
            crypto/bn/rsaz-2k-avx512.asm
            crypto/modes/ghash-x86_64.asm
            crypto/modes/aesni-gcm-x86_64.asm
            crypto/modes/aes-gcm-avx512.asm
        )
    elseif(PROJECT_PLATFORM STREQUAL "x86")
        set(_nasm_args win32)
        set(_asm_file_list
            crypto/aes/libcrypto-lib-vpaes-x86.obj.asm
            crypto/aes/libcrypto-lib-aesni-x86.obj.asm
            crypto/aes/libcrypto-lib-aes-586.obj.asm
            crypto/bf/libcrypto-lib-bf-586.obj.asm
            crypto/bn/libcrypto-lib-x86-mont.obj.asm
            crypto/bn/libcrypto-lib-x86-gf2m.obj.asm
            crypto/camellia/libcrypto-lib-cmll-x86.obj.asm
            crypto/cast/libcrypto-lib-cast-586.obj.asm
            crypto/des/libcrypto-lib-des-586.obj.asm
            crypto/des/libcrypto-lib-crypt586.obj.asm
            crypto/ec/libcrypto-lib-ecp_nistz256-x86.obj.asm
            crypto/md5/libcrypto-lib-md5-586.obj.asm
            crypto/modes/libcrypto-lib-ghash-x86.obj.asm
            crypto/poly1305/libcrypto-lib-poly1305-x86.obj.asm
            crypto/rc4/libcrypto-lib-rc4-586.obj.asm
            crypto/ripemd/libcrypto-lib-rmd-586.obj.asm
            crypto/sha/libcrypto-lib-sha512-586.obj.asm
            crypto/sha/libcrypto-lib-sha256-586.obj.asm
            crypto/sha/libcrypto-lib-sha1-586.obj.asm
            crypto/whrlpool/libcrypto-lib-wp-mmx.obj.asm
        )
    elseif(PROJECT_PLATFORM STREQUAL "ARM64")
        # ARM64 has no ASM files in this configuration
        set(_nasm_args "")
        set(_asm_file_list )
    endif()

    # Compile ASM files
    if(MSVC AND NOT PROJECT_PLATFORM STREQUAL "ARM64" AND _asm_file_list)
        set(NASM_EXECUTABLE ${CMAKE_CURRENT_SOURCE_DIR}/../../buildtools/tools/nasm.exe)

        foreach(_asm_file ${_asm_file_list})
            get_filename_component(_asm_file_fn ${_asm_file} NAME)
            # message("_asm_file: ${_asm_file}")
            set(_asm_object ${CMAKE_CURRENT_BINARY_DIR}/${_asm_file_fn}.obj)
            add_custom_command(
                OUTPUT ${_asm_object}
                COMMAND ${NASM_EXECUTABLE}
                ARGS -f ${_nasm_args} -o ${_asm_object} ${CMAKE_CURRENT_SOURCE_DIR}/${_asm_file}
                DEPENDS ${_asm_file}
            )
            list(APPEND _asm_files ${_asm_object})
        endforeach()
    endif()

    set(${RESULT_VAR} ${_asm_files} PARENT_SCOPE)
endfunction()

openssl_setup_asm_files(ASM_OBJECTS)

#-------------------------------------------------------------------------------
# Build ssleay32 (SSL library)
#-------------------------------------------------------------------------------

add_library(ssleay32 STATIC ${SSL_SOURCES})
openssl_apply_compile_options(ssleay32)
target_include_directories(ssleay32 SYSTEM BEFORE PRIVATE
    # ${CMAKE_CURRENT_SOURCE_DIR}
    # ${CMAKE_CURRENT_SOURCE_DIR}/include
)

#-------------------------------------------------------------------------------
# Build libeay32 (Crypto library)
#-------------------------------------------------------------------------------

add_library(libeay32 STATIC
    ${ASM_OBJECTS}
    ${CRYPTO_SOURCES}
    ${CRYPTO_PLATFORM_SOURCES}
)
openssl_apply_compile_options(libeay32)

# Additional include directories for providers (only needed by libeay32)
target_include_directories(libeay32 SYSTEM BEFORE PRIVATE
    # ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/providers/common/include
    ${CMAKE_CURRENT_SOURCE_DIR}/providers/implementations/include
    # ${CMAKE_CURRENT_SOURCE_DIR}/include/internal
)

#-------------------------------------------------------------------------------
# Debug output (optional, for verification)
#-------------------------------------------------------------------------------

message(STATUS "OpenSSL Configuration:")
message(STATUS "  SSL sources: ${SSL_SOURCES}")
message(STATUS "  Crypto sources: ${CRYPTO_SOURCES}")
message(STATUS "  Platform-specific sources: ${CRYPTO_PLATFORM_SOURCES}")
message(STATUS "  ASM objects: ${ASM_OBJECTS}")
